saving token on SharedPreferences

--- a/connect/build.gradle
+++ b/connect/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     // chrome tabs
     compile 'com.android.support:appcompat-v7:25.3.0'
     compile 'com.android.support:customtabs:25.3.0'
+    compile 'com.github.jgabrielfreitas:DataController:v1.3.3'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
 }
