--- a/connect/src/main/AndroidManifest.xml
+++ b/connect/src/main/AndroidManifest.xml
@@ -2,13 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.flip.connect">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+  <uses-permission android:name="android.permission.INTERNET"/>
 
-    <application
-        android:allowBackup="true"
-        android:label="@string/app_name"
-        android:supportsRtl="true">
-        <activity android:name=".view.activities.LoginActivity" />
-    </application>
+  <application
+      android:allowBackup="true"
+      android:label="@string/app_name"
+      android:supportsRtl="true">
+    <activity android:name=".view.activities.LoginActivity"/>
+    <activity android:name=".view.activities.CheckoutActivity">
+    </activity>
+  </application>
 
 </manifest>
