--- a/connect/build.gradle
+++ b/connect/build.gradle
@@ -11,8 +11,7 @@ android {
     versionName "1.0"
 
     buildConfigField("String", "KEY", '"${key}"')
-    buildConfigField("String", "FLIP_LOGIN",
-        '"http://flip-connect.herokuapp.com/?clientId=${key}&redirectUrl=//flip-connect.herokuapp.com"')
+    buildConfigField("String", "FLIP_LOGIN", '"http://flip-connect.herokuapp.com/?clientId=${key}&redirectUrl=//flip-connect.herokuapp.com"')
     buildConfigField("String", "FLIP_CHECKOUT",
         '"http://flip-connect.herokuapp.com/checkout?clientId=${key}"')
     testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
