--- a/connect/src/main/AndroidManifest.xml
+++ b/connect/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.flip.connect">
 
   <uses-permission android:name="android.permission.INTERNET"/>
@@ -8,8 +9,10 @@
       android:allowBackup="true"
       android:label="@string/app_name"
       android:supportsRtl="true">
-    <activity android:name=".view.activities.LoginActivity"/>
-    <activity android:name=".view.activities.CheckoutActivity">
+    <activity android:name=".view.activities.LoginActivity"
+        android:theme = "@style/NoActionBar"/>
+    <activity android:name=".view.activities.CheckoutActivity"
+        android:theme = "@style/NoActionBar">
     </activity>
   </application>
 
