--- a/connect/src/main/AndroidManifest.xml
+++ b/connect/src/main/AndroidManifest.xml
@@ -2,17 +2,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.flip.connect">
 
-  <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
-  <application
-      android:allowBackup="true"
-      android:label="@string/app_name"
-      android:supportsRtl="true">
-    <activity android:name=".view.activities.LoginActivity"
-        android:theme = "@style/NoActionBar"/>
-    <activity android:name=".view.activities.CheckoutActivity"
-        android:theme = "@style/NoActionBar">
-    </activity>
-  </application>
+    <application
+        android:allowBackup="true"
+        android:label="@string/app_name"
+        android:supportsRtl="true">
+        <activity
+            android:name=".presentation.view.activities.LoginActivity"
+            android:theme="@style/NoActionBar">
+
+        </activity>
+        <activity
+            android:name=".presentation.view.activities.CheckoutActivity"
+            android:theme="@style/NoActionBar"></activity>
+    </application>
 
 </manifest>
