--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,6 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_logo"
-        android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -17,11 +16,11 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="com.flip.connect.presentation.view.activities.LoginActivity">
+        <activity android:name="com.flip.connect.presentation.login.LoginActivity">
             <intent-filter>
                 <data
                     android:host="ipiranga"
-                    android:scheme="flipconnect" />
+                    android:scheme="ipiranga" />
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.BROWSABLE" />
