--- a/connect/src/main/AndroidManifest.xml
+++ b/connect/src/main/AndroidManifest.xml
@@ -9,13 +9,13 @@
         android:label="@string/app_name"
         android:supportsRtl="true">
         <activity
-            android:name=".presentation.view.activities.LoginActivity"
+            android:name=".presentation.login.LoginActivity"
             android:theme="@style/NoActionBar">
 
         </activity>
         <activity
-            android:name=".presentation.view.activities.CheckoutActivity"
-            android:theme="@style/NoActionBar"></activity>
+            android:name=".presentation.checkout.CheckoutActivity"
+            android:theme="@style/NoActionBar" />
     </application>
 
 </manifest>
