--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,19 +21,14 @@ android {
 }
 
 dependencies {
-  compile fileTree(include: ['*.jar'], dir: 'libs')
-  testCompile 'junit:junit:4.12'
-  androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-    exclude group: 'com.android.support', module: 'support-annotations'
-  })
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
 
-  // android
-  compile 'com.android.support:appcompat-v7:25.2.0'
-
-  // views
-  compile 'com.android.support.constraint:constraint-layout:1.0.2'
-  compile 'com.github.jgabrielfreitas:Bases:0.0.1'
-
-  // flip connect library
-  compile project(':connect')
+    compile project(':connect')
+    compile 'com.android.support:appcompat-v7:25.2.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    testCompile 'junit:junit:4.12'
+    compile 'com.android.support:design:25.3.1'
 }
