--- a/connect/src/main/AndroidManifest.xml
+++ b/connect/src/main/AndroidManifest.xml
@@ -4,18 +4,10 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-    <application
-        android:allowBackup="true"
-        android:label="@string/app_name"
-        android:supportsRtl="true">
+    <application android:supportsRtl="true">
         <activity
             android:name=".presentation.login.LoginActivity"
-            android:theme="@style/NoActionBar">
-
-        </activity>
-        <activity
-            android:name=".presentation.checkout.CheckoutActivity"
-            android:theme="@style/NoActionBar" />
+            android:theme="@style/NoActionBar"/>
     </application>
 
 </manifest>
