--- a/connect/build.gradle
+++ b/connect/build.gradle
@@ -26,13 +26,15 @@ android {
             buildConfigField("String", "FLIP_LOGIN", '"http://flipconnect-signin-staging.herokuapp.com/?clientId=${key}&redirectUri=${schema}://${host}&responseType=code&state=${state}"')
             buildConfigField("String", "FLIP_CHECKOUT", '"http://flipconnect-signin-staging.herokuapp.com/checkout?clientId=${key}"')
             buildConfigField "String", 'API_BASE_URL', '"http://dlp-qrservices.cloudapp.net:20112"'
-            buildConfigField("String","PUBLIC_API",'"http://dlp-qrservices.cloudapp.net:20116"')
+            buildConfigField("String", "PUBLIC_API", '"http://dlp-qrservices.cloudapp.net:20116"')
+            buildConfigField("String","PRIVATE_API",'"http://dlp-qrservices.cloudapp.net:20115"')
         }
         debug {
             buildConfigField("String", "FLIP_LOGIN", '"http://flipconnect-signin-staging.herokuapp.com/?clientId=${key}&redirectUri=${schema}://${host}&responseType=code"')
             buildConfigField("String", "FLIP_CHECKOUT", '"http://flipconnect-signin-staging.herokuapp.com/checkout?clientId=${key}"')
             buildConfigField "String", 'API_BASE_URL', '"http://dlp-qrservices.cloudapp.net:20112"'
-            buildConfigField("String","PUBLIC_API",'"http://dlp-qrservices.cloudapp.net:20116"')
+            buildConfigField("String", "PUBLIC_API", '"http://dlp-qrservices.cloudapp.net:20116"')
+            buildConfigField("String","PRIVATE_API",'"http://dlp-qrservices.cloudapp.net:20115"')
         }
     }
 }
@@ -41,9 +43,12 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.0'
+    compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.github.jgabrielfreitas:DataController:v1.3.3'
-    testCompile 'junit:junit:4.12'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    testCompile 'junit:junit:4.12'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
 }
