--- a/connect/build.gradle
+++ b/connect/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     compile 'com.github.jgabrielfreitas:DataController:v1.3.3'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:recyclerview-v7:25.3.1'
