--- a/connect/build.gradle
+++ b/connect/build.gradle
@@ -42,13 +42,12 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
     // android SDK
-
     // shared preferences
     compile 'com.android.support:appcompat-v7:25.3.0'
     compile 'com.github.jgabrielfreitas:DataController:v1.3.3'
     testCompile 'junit:junit:4.12'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile project(':fplib-release')
 }
