change fingerprint to production

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             <intent-filter>
                 <data
                     android:host="HOST"
-                    android:schema="SCHEME" />
+                    android:scheme="SCHEME" />
 
                 <action android:name="android.intent.action.VIEW" />
 
