--- a/connect/build.gradle
+++ b/connect/build.gradle
@@ -3,6 +3,8 @@ apply plugin: 'com.github.dcendents.android-maven'
 
 group 'com.flip.connect'
 
+version '0.1.0'
+
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
