Using fplib in libs folder instead of module

--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,11 @@ buildscript {
 
 allprojects {
     repositories {
-         jcenter()
+        jcenter()
         maven { url "https://jitpack.io" }
+        flatDir {
+            dirs 'libs'
+        }
     }
 }
 
