--- a/connect/build.gradle
+++ b/connect/build.gradle
@@ -59,5 +59,6 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile project(':fplib-release')
+//    compile project(':fplib-release')
+    compile fileTree(dir: 'libs', include: '*.jar')
 }
