--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,9 @@
         <activity android:name="com.flip.connect.presentation.views.login.LoginActivity">
             <intent-filter>
                 <data
-                    android:host="ipiranga"
-                    android:scheme="ipiranga" />
+                    android:host="HOST"
+                    android:scheme="SCHEMA"
+                    />
 
                 <action android:name="android.intent.action.VIEW" />
 
