finish revoke toke implementation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,7 @@
             <intent-filter>
                 <data
                     android:host="HOST"
-                    android:scheme="SCHEMA"
-                    />
+                    android:scheme="SCHEMA" />
 
                 <action android:name="android.intent.action.VIEW" />
 
